--- a/all_inventory_app - production - selectbox/requirements.txt
+++ b/all_inventory_app - production - selectbox/requirements.txt
@@ -1,6 +1,6 @@
 streamlit
 pandas
-Pillow  # Untuk Image, ImageDraw, ImageFont (PIL fork)
+Pillow  
 numpy
-python-barcode # Untuk Code128 dan ImageWriter
-openpyxl # Pandas membutuhkan ini untuk membaca/menulis file .xlsx
+python-barcode 
+openpyxl
